tests/test_arithmetic/bad/division_by_zero.catala_en
## `Division_by_zero` exception management

### with integers

```catala
declaration scope Int:
  context i content integer

scope Int:
  definition i equals 1 / 0
```

### with decimals

```catala
declaration scope Dec:
  context i content decimal

scope Dec:
  definition i equals 1. /. 0.
```

### with money

```catala
declaration scope Money:
  context i content decimal

scope Money:
  definition i equals $10.0 /$ $0.0
```

### with duration

```catala
declaration scope Duration:
  context i content decimal

scope Duration:
  definition i equals 10 day /^ 0 day
```

```catala-test {id="Dec.Interpret"}
catala Interpret -s Dec
```

```catala-test {id="Duration.Interpret"}
catala Interpret -s Duration
```

```catala-test {id="Int.Interpret"}
catala Interpret -s Int
```

```catala-test {id="Money.Interpret"}
catala Interpret -s Money
```
